// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button 组件 正确导出 Button 组件 1`] = `
<button
  className="guree-button guree-button-middle guree-button-default"
  type="button"
>
   
  <span>
    button
  </span>
</button>
`;

exports[`Button 组件 测试 Button 组件 disabled 参数 1`] = `
<button
  className="guree-button guree-button-middle guree-button-default"
  disabled={true}
  type="button"
>
   
  <span>
    disabled
  </span>
</button>
`;

exports[`Button 组件 测试 Button 组件 icon 参数 1`] = `
<button
  className="guree-button guree-button-middle guree-button-default"
  type="button"
>
  <span
    className="guree-button-action"
  >
    <svg
      className="guree-icon"
      style={
        Object {
          "fill": undefined,
          "height": "1em",
          "width": "1em",
        }
      }
    >
      <use
        xlinkHref="#adn"
      />
    </svg>
  </span>
   
  <span>
    button
  </span>
</button>
`;

exports[`Button 组件 测试 Button 组件 loading 参数 1`] = `
<button
  className="guree-button guree-button-middle guree-button-default"
  type="button"
>
  <span
    className="guree-button-action"
  >
    <svg
      className="guree-icon"
      style={
        Object {
          "fill": undefined,
          "height": "1em",
          "width": "1em",
        }
      }
    >
      <use
        xlinkHref="#spinner"
      />
    </svg>
  </span>
   
  <span>
    loading
  </span>
</button>
`;

exports[`Button 组件 测试 Button 组件 size 参数 1`] = `
<button
  className="guree-button guree-button-large guree-button-default"
  type="button"
>
   
  <span>
    large
  </span>
</button>
`;

exports[`Button 组件 测试 Button 组件 size 参数 2`] = `
<button
  className="guree-button guree-button-middle guree-button-default"
  type="button"
>
   
  <span>
    middle
  </span>
</button>
`;

exports[`Button 组件 测试 Button 组件 size 参数 3`] = `
<button
  className="guree-button guree-button-small guree-button-default"
  type="button"
>
   
  <span>
    small
  </span>
</button>
`;

exports[`Button 组件 测试 Button 组件 type 参数 1`] = `
<button
  className="guree-button guree-button-middle guree-button-default"
  type="button"
>
   
  <span>
    default
  </span>
</button>
`;

exports[`Button 组件 测试 Button 组件 type 参数 2`] = `
<button
  className="guree-button guree-button-middle guree-button-primary"
  type="button"
>
   
  <span>
    primary
  </span>
</button>
`;

exports[`Button 组件 测试 Button 组件 type 参数 3`] = `
<button
  className="guree-button guree-button-middle guree-button-danger"
  type="button"
>
   
  <span>
    danger
  </span>
</button>
`;

exports[`Button 组件 测试 Button 组件 type 参数 4`] = `
<button
  className="guree-button guree-button-middle guree-button-warning"
  type="button"
>
   
  <span>
    warning
  </span>
</button>
`;

exports[`Button 组件 测试 Button 组件 type 参数 5`] = `
<button
  className="guree-button guree-button-middle guree-button-text"
  type="button"
>
   
  <span>
    text
  </span>
</button>
`;
